[package]
name = "robotank"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
